# rvsdg-treedc

./: .gitignore  CMakeLists.txt  README.md  run_heuristics.sh
dot_files/: decomp.dot  decomp2.dot  graph.dot  k7.dot  rvsdg.xml
gen_tests/: Overview.csv  conf_from_csv.py  g6todot.py  g6todot.sh  gen_test.py  gen_test.sh  test  test_config.txt
gnuplots/: README.md  gap.plg  nodes-gap-avg.plg  nodes-gap.plg  nodes-upper-avg.plg  nodes-upper.plg  plot.sh  upper.plg
include/: BranchAndBound.h  DFS.h  Graph.h  Heuristics.h  Kleinberg.h  Operations.h  Parse.h  heuristic_tests.h  main.h  run_dotfiles.h
parser/: .gitignore  CMakeLists.txt
parser/include/: edge.h  element.h  node.h  region.h  xml_parser.h
parser/src/: edge.h  element.cpp  element.h  main.cpp  main.h  node.cpp  node.h  region.cpp  region.h  xml_parser.cpp  xml_parser.h
src/: BranchAndBound.cpp  DFS.cpp  Graph.cpp  Heuristics.cpp  Kleinberg.cpp  Operations.cpp  Parse.cpp  main.cpp  run_dotfiles.cpp  tests.cpp
test/: tests.cpp  unittests.cpp
test/heuristics/: heuristic_blueprint  heuristic_tests.cpp
xml_parser/: CMakeLists.txt  README.md
xml_parser/dot_files/: .gitignore
xml_parser/include/: edge.h  element.h  main.h  node.h  region.h  xml_parser.h
xml_parser/src/: element.cpp  main.cpp  node.cpp  region.cpp  xml_parser.cpp
